--- a/App/Home/View/Login/index.html
+++ b/App/Home/View/Login/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="__PUBLIC__/Home/css/login.css" type="text/css">
     <script type="text/javascript" src="__PUBLIC__/common/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/common/common.js"></script>
     <script type="text/javascript" src="__PUBLIC__/Home/js/login_box.js"></script>
     <script type="text/javascript" src="__PUBLIC__/Home/js/login.js"></script>
     <script type="text/javascript" language="JavaScript">
