--- a/App/Home/View/Login/index.html
+++ b/App/Home/View/Login/index.html
@@ -1,11 +1,11 @@
 <html>
 
 <head>
-    <title>KobeHome</title>
+    <title>KobeHome-Login</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="__PUBLIC__/Home/css/login.css" type="text/css">
-    <script type="text/javascript" src="__PUBLIC__/common/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/common/common.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/Common/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/Common/common.js"></script>
     <script type="text/javascript" src="__PUBLIC__/Home/js/login_box.js"></script>
     <script type="text/javascript" src="__PUBLIC__/Home/js/login.js"></script>
     <script type="text/javascript" language="JavaScript">
@@ -22,7 +22,7 @@
                 <label for="name">用户名</label>
                 <input type="text" name="username" id="name">
                 <span class="spin"></span>
-                <span style="display:none" id="login_usernotin">用户名不存在，清注册</span>
+                <span style="display:none" id="login_usernotin">用户名不存在，请注册</span>
                 <span style="display:none" id="login_usernull">用户名为空</span>
             </div>
             <div class="input">
