--- a/App/Home/View/index/index.html
+++ b/App/Home/View/index/index.html
@@ -1,13 +1,3 @@
-<html>
-
-<head>
-    <title>网上书城</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="__PUBLIC__/Home/css/index.css" type="text/css">
-    <script type="text/javascript" src="__PUBLIC__/common/jquery-1.7.2.min.js"></script>
-</head>
-
-<body>
-</body>
-    
-</html>
+<extend name="Common:base" />
+<block name="title">KobeHome-首页</title>
+<block name="content"></block>
