--- a/App/Home/View/Common/base.html
+++ b/App/Home/View/Common/base.html
@@ -49,33 +49,33 @@
             <div class="nav_menu_box nav_menu_box2">
                 <a href="">
                     <span>
-						<img src="__PUBLIC__/Home/img/KOBELOGO.png" style="height:52%;width:60%"/>
+						<img src="__PUBLIC__/Home/img/KOBELOGO.png" style="height:52%;width:60%" alt="下拉"/>
 					</span>
                 </a>
             </div>
             <div class="nav_menu_box hide_box nav_menu_box2">
                 <a href="">
-                    <span>鞋类&nbsp;<img src="__PUBLIC__/Home/img/xiala.png"></span>
+                    <span>鞋类&nbsp;<img src="__PUBLIC__/Home/img/xiala.png" alt="下拉"></span>
                 </a>
             </div>
             <div class="nav_menu_box hide_box nav_menu_box2">
                 <a href="">
-                    <span>服装&nbsp;<img src="__PUBLIC__/Home/img/xiala.png"></span>
+                    <span>服装&nbsp;<img src="__PUBLIC__/Home/img/xiala.png" alt="下拉"></span>
                 </a>
             </div>
             <div class="nav_menu_box hide_box nav_menu_box2">
                 <a href="">
-                    <span>装备&nbsp;<img src="__PUBLIC__/Home/img/xiala.png"></span>
+                    <span>装备&nbsp;<img src="__PUBLIC__/Home/img/xiala.png" alt="下拉"></span>
                 </a>
             </div>
             <div class="nav_menu_box hide_box nav_menu_box2">
                 <a href="">
-                    <span>功能饮料&nbsp;<img src="__PUBLIC__/Home/img/xiala.png"></span>
+                    <span>功能饮料&nbsp;<img src="__PUBLIC__/Home/img/xiala.png" alt="下拉"></span>
                 </a>
             </div>
             <div class="nav_menu_box hide_box nav_menu_box2">
                 <a href="">
-                    <span>主推主题&nbsp;<img src="__PUBLIC__/Home/img/xiala.png"></span>
+                    <span>主推主题&nbsp;<img src="__PUBLIC__/Home/img/xiala.png" alt="下拉"></span>
                 </a>
             </div>
             <div class="nav_menu_box nav_menu_box2" style="width:500px">
@@ -170,13 +170,13 @@
             <ul id="share">
                 <li style="font-size:1em;color:#696666;">分享</li>
                 <li>
-                    <a href="#"><img src="__PUBLIC__/Home/img/weibo.png"></a>
+                    <a href="#"><img src="__PUBLIC__/Home/img/weibo.png" alt="微博"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="__PUBLIC__/Home/img/qq.png"></a>
+                    <a href="#"><img src="__PUBLIC__/Home/img/qq.png" alt="腾讯QQ"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="__PUBLIC__/Home/img/weixin.png"></a>
+                    <a href="#"><img src="__PUBLIC__/Home/img/weixin.png" alt="微信"></a>
                 </li>
             </ul>
             <hr />
