--- a/App/Home/View/Common/base.html
+++ b/App/Home/View/Common/base.html
@@ -21,17 +21,23 @@
             <span id="msg_menu">
 				<ul id="menu_list">
 					<li class='list1'><a href="#"><img src="__PUBLIC__/Home/img/cart.png" alt="购物车">&nbsp;购物车</a></li>
-					<li class='list1'><a href="#"><img src="__PUBLIC__/Home/img/user.png" alt="用户">用户信息</a>
-						<ul class="msg_list msg_list_user">
-							<li><a href="#">个人管理</a></li>
+					<li class='list1'>
+						<if condition="$_SESSION['username'] eq ''">
+						<a href="{:U('Login/index')}"><img src="__PUBLIC__/Home/img/user.png" alt="用户">请登录
+						</a>
+						<else />
+						<a href="#"><img src="__PUBLIC__/Home/img/user.png" alt="用户">{$_SESSION['username']}</a>
+						<ul class="msg_list msg_list_user" style="display:none">
+							<li><a href="{:U('Userinfo/userset')}">个人管理</a></li>
 							<li><a href="#">订单管理</a></li>
 							<li><a href="#">收藏</a></li>
-							<li><a href="#">退出登录</a></li>
+							<li><a href="{:U('Common/logout')}">注销</a></li>
 						</ul>
+					</if>
 					</li>
 					<li class='list1'><a href="#">意见反馈</a></li>
 					<li class='list1'><a href="#">帮助</a>
-						<ul class="msg_list msg_list_help">
+						<ul class="msg_list msg_list_help" style="display:none">
 							<li><a href="#">配送服务</a></li>
 							<li><a href="#">退换货</a></li>
 							<li><a href="#">订单状态</a></li>
@@ -47,7 +53,7 @@
         </div>
         <div id="nav_menu">
             <div class="nav_menu_box nav_menu_box2">
-                <a href="">
+                <a href="{:U('Index/index')}">
                     <span>
 						<img src="__PUBLIC__/Home/img/KOBELOGO.png" style="height:52%;width:60%" alt="下拉"/>
 					</span>
