--- a/App/Home/View/index/index.html
+++ b/App/Home/View/index/index.html
@@ -1,5 +1,5 @@
 <extend name="Common:base" />
-<block name="title">KobeHome-首页</block>
+<block name="title">KobeHome--首页</block>
 <block name="addjs">
     <script type="text/javascript" src="__PUBLIC__/Home/js/responsiveslides.min.js"></script>
     <script type="text/javascript">
@@ -9,8 +9,8 @@
             auto: true,
             pager: false,
             nav: true,
-            speed: 500,
-            timeout: 8000,
+            speed: 600,
+            timeout: 5000,
             pager: true,
             pauseControls: true,
             namespace: "callbacks"
