--- a/Public/Home/css/userset.css
+++ b/Public/Home/css/userset.css
@@ -135,7 +135,7 @@
 
 
 /*
-美化select
+美化日期select
  */
 
 #select_year,
@@ -212,6 +212,6 @@ select:hover,
 
 select {
     background: #FFFFFF;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+    /*box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);*/
     height: 30px;
 }
