--- a/App/Admin/View/Common/base.html
+++ b/App/Admin/View/Common/base.html
@@ -93,7 +93,7 @@
                             <a href="#"><i class="fa fa-laptop nav_icon"></i>商品管理<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="#">商品列表</a>
+                                    <a href="{:U('productlist/index')}">商品列表</a>
                                 </li>
                                 <li>
                                     <a href="{:U('productinput/index')}">商品录入</a>
