--- a/App/Admin/View/Common/base.html
+++ b/App/Admin/View/Common/base.html
@@ -27,12 +27,14 @@
     <link href="__PUBLIC__/Admin/css/custom.css" rel="stylesheet">
     <!-- jQuery -->
     <script src="__PUBLIC__/Admin/js/jquery.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/Common/layer.js"></script>
     <!-- Metis Menu Plugin JavaScript -->
     <script src="__PUBLIC__/Admin/js/metisMenu.min.js"></script>
     <script src="__PUBLIC__/Admin/js/custom.js"></script>
     <!-- Graph JavaScript -->
     <script src="__PUBLIC__/Admin/js/d3.v3.js"></script>
     <script src="__PUBLIC__/Admin/js/rickshaw.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/Common/common.js"></script>
     <block name="addjs"></block>
 </head>
 
@@ -66,7 +68,7 @@
                         </li>
                         <li class="avatar">
                             <a href="#">
-                                <img src="images/2.png" alt="" />
+                                <img src="__PUBLIC__/Admin/images/2.png" alt="" />
                                 <div>新消息</div>
                                 <small>1 minute ago</small>
                                 <span class="label label-info">新</span>
